--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/pricewatch" >
+        android:theme="@style/AppTheme" >
         <activity
             android:name="splash.Splashscreen"
             android:label="@string/app_name" >
